--- a/GroceryStore/GroceryStore/Views/_ViewImports.cshtml
+++ b/GroceryStore/GroceryStore/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using GroceryStore
 @using GroceryStore.Models
+@using GroceryStore.Data.Model
+@using GroceryStore.Models.Products
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
